<resources>
    <string name="app_name">Siti</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username"></string>
    <string name="password"></string>
    <string name="login">Login</string>
    <string name="title_activity_customer_list">CustomerListActivity</string>
    <string name="no_customer_found">No customers found</string>
    <string name="title_activity_customer_bill">CustomerBillActivity</string>
    <string name="customer_bill">Customer Bill</string>
    <string name="customer_number">Customer Number</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Customer Address</string>
    <string name="colon">:  </string>
    <string name="space"> </string>
    <string name="last_payment">Last Payment</string>
    <string name="last_payment_date">Last Payment Date</string>
    <string name="total_balance">Total Balance</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="add">Add</string>
    <string name="print">Print</string>
    <string name="receipt_number">Receipt Number</string>
    <string name="amount">Amount</string>
    <string name="bill_date">Bill Date</string>
    <string name="company_name">Siti Channel</string>
    <string name="print_test">Print Test</string>
    <string name="action_connect_device">Connect Device</string>
    <string name="action_unpair_device">Unpair Device</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="collection_report">Collection Report</string>
    <string name="customer_list">Customer List</string>
    <string name="title_activity_collection_report">CollectionReportActivity</string>
    <string name="from_date">From Date</string>
    <string name="bill_num_from">Bill Num From</string>
    <string name="bill_num_to">Bill Num To</string>
    <string name="to_date">To Date</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="num_of_bills_found">No. of bills</string>
    <string name="amount_collected">Amount Collected</string>
    <string name="collection_date">Collection Date</string>
    <string name="search_result">Search Result</string>
    <string name="printer_name">Printer Name</string>
    <string name="printer_status">Printer Status</string>
    <string name="connect">Connect</string>
    <string name="ok">OK</string>
    <string name="title_activity_app_settings">AppSettingsActivity</string>
    <string name="key">Key</string>
    <string name="save">Save</string>
    <string name="enter_key">Enter Key</string>
    <string name="machine_info">Machine Info</string>
    <string name="app_settings">App Settings</string>
    <string name="connect_printer">Connect To Printer</string>
    <string name="last_balance">Last Balance</string>
    <string name="current_balance">Current Balance</string>
    <string name="title_activity_error_display_window">ErrorDisplayWindowActivity</string>
</resources>
