<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
     tools:context=".MainActivity">

    <EditText android:id="@+id/username_edit_text"
    android:text="@string/username"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
    />

    <EditText android:id="@+id/password_edit_text"
        android:text="@string/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:password="true" />

    <TextView
    android:id="@+id/login_type_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#ffffff"
    />

    <Button
    android:id="@+id/login_button"
    android:text="@string/login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />

</LinearLayout>
