<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/key"
        android:id="@+id/textView"
        android:layout_weight="0.24"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/keyEditText"
        android:layout_weight="1"
        android:inputType="text"
        android:hint="@string/enter_key"
        android:layout_gravity="center_horizontal"
        android:singleLine="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/machine_info"
        android:id="@+id/machineInfoTextView"
        android:layout_weight="0.24"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/machineInfoEditText"
        android:layout_weight="1"
        android:inputType="text"
        android:hint="@string/machine_info"
        android:editable="false"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
