<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.actv.simpfo.myapplication.CollectionReportActivity" android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/from_date" />

    <EditText android:id="@+id/fromDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:onClick="setFromDate" android:width="100dp"
        android:inputType="date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/to_date" />

        <EditText android:id="@+id/toDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:onClick="setToDate" android:width="100dp"
            android:inputType="date" />


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/searchOnDateButton"
            android:onClick="searchOnDateButtonClick" />
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/bill_num_from"
            android:id="@+id/billNumFromTextView" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/billNumFromEditText"
            android:layout_weight="0.13"
            android:hint="Bill No. From" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_num_to"
            android:id="@+id/billNumToTextView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/billNumToEditText"
            android:layout_weight="1"
            android:hint="Bill No. To" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/searchOnBillNumButton"
            android:onClick="searchOnBillNumButtonClick" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/collectionFilterEditText"
            android:layout_weight="1"
            android:hint="Search Customer Name or Bill Num" />

        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resultListView"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>
